--- a/src/main/resources/templates/mypage-like.mustache
+++ b/src/main/resources/templates/mypage-like.mustache
@@ -16,7 +16,7 @@
                         <h4>{{normalPrice}}</h4>
                     </div>
                     {{#ARFitting}}
-                        <a href="#"><i class="fa-brands fa-adn"></i></a>
+                        <a href="/arfitting/{{productNo}}"><i class="fa-brands fa-adn"></i></a>
                     {{/ARFitting}}
                 </div>
             {{/productList}}
