--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -24,7 +24,7 @@
             </li>
 
             <li><a href="/html/arfitting.html">AR Fitting</a></li>
-            <li><a href="/html/foryou.html">For You</a></li>
+            <li><a href="/foryou">For You</a></li>
             <li><a href="/html/about.html">About</a></li>
 
             <li id="loginicon"><a><i class="fa-solid fa-user"></i></a>
@@ -66,7 +66,7 @@
                     <h4>{{normalPrice}}</h4>
                 </div>
                 {{#ARFitting}}
-                    <a href="#"><i class="fa-brands fa-adn"></i></a>
+                    <a href="/arfitting/{{productNo}}"><i class="fa-brands fa-adn"></i></a>
                 {{/ARFitting}}
             </div>
     {{/product}}
