--- a/src/main/resources/templates/layout/nav.mustache
+++ b/src/main/resources/templates/layout/nav.mustache
@@ -15,7 +15,7 @@
     </li>
 
     <li><a href="/html/arfitting.html">AR Fitting</a></li>
-    <li><a href="/html/foryou.html">For You</a></li>
+    <li><a id="foryouhightlight" href="/foryou">For You</a></li>
     <li><a href="/html/about.html">About</a></li>
 
     <li id="loginicon"><a><i class="fa-solid fa-user"></i></a>
