--- a/src/main/resources/templates/mypage.mustache
+++ b/src/main/resources/templates/mypage.mustache
@@ -7,7 +7,7 @@
         <h2>MY PAGE</h2>
         <div class="mypage-form">
             <div class="profile">
-                <div class="profile-pic"></div>
+                <div class="profile-pic"><img src="{{userPicture}}"/></div>
                 <div class="proflie-name">{{userName}}님 안녕하세요!</div>
             </div>
             <div class="mypage-menu">
