--- a/src/main/resources/templates/product.mustache
+++ b/src/main/resources/templates/product.mustache
@@ -104,12 +104,12 @@
             <tbody>
             {{#reviews}}
             <tr>
-                <td class="num">0</td>
+                <td class="num">  </td>
                 <td class="thumb"><a href="/products/{{product.productNo}}"><img src="{{product.mainImage}}" width="50px" height="50px" alt=""><span>{{product.name}}</span></a></td>
                 <td class="subject">
-                    <a href="/" style="color:#555555;">{{content}}</a>
+                    <a href="/reviews/{{reviewNo}}" style="color:#555555;">{{content}}</a>
                 </td>
-                <td class="writer">작성자</td>
+                <td class="writer">{{userName}}</td>
                 <td class="txtLess ">{{createddate}}</td>
                 <td class="txtLess ">{{count}}</td>
             </tr>
