--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -24,6 +24,8 @@
 
 
 <script src="/jsapp/script.js"></script>
+<script src="/jsapp/index.js"></script>
+
 <script>
     const bar = document.getElementById('bar');
     const nav = document.getElementById('navbar');
