--- a/src/main/resources/templates/product.mustache
+++ b/src/main/resources/templates/product.mustache
@@ -208,6 +208,7 @@
     </div>
 </footer>
 
+<script src="/jsapp/index.js"></script>
 <script>
     const bar = document.getElementById('bar');
     const nav = document.getElementById('navbar');
