--- a/src/main/resources/templates/signup.mustache
+++ b/src/main/resources/templates/signup.mustache
@@ -9,11 +9,11 @@
             <form action="/users/signup" name="user" method="POST">
                 <div class="inputBx">
                     <span>이메일 * </span>
-                    <input type="text" value="{{email}}">
+                    <input type="text" value="{{email}}" disabled>
                 </div>
                 <div class="inputBx">
                     <span>이름 *</span>
-                    <input type="text" value="{{name}}">
+                    <input type="text" value="{{name}}" disabled>
                 </div>
                 <div class="inputBx">
                     <span>키 *</span>
