--- a/src/main/resources/templates/user-modify.mustache
+++ b/src/main/resources/templates/user-modify.mustache
@@ -9,11 +9,11 @@
             <form action="/users/modify" name="user" method="POST">
                 <div class="inputBx">
                     <span>이메일 <em> * </em> </span>
-                    <input type="text" value="{{user.email}}" />
+                    <input type="text" value="{{user.email}}" disabled/>
                 </div>
                 <div class="inputBx">
                     <span>이름 *</span>
-                    <input type="text" value="{{user.name}}" />
+                    <input type="text" value="{{user.name}}" disabled/>
                 </div>
                 <div class="inputBx">
                     <span>키 <em> * </em></span>
