--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -22,6 +22,7 @@
     </div>
 </footer>
 
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
 <script src="/jsapp/script.js"></script>
 <script src="/jsapp/index.js"></script>
