0923 satisfaction by product

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,4 +1,20 @@
-{{>layout/head}}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NAVATAR</title>
+
+    <!-- 구글 폰트 적용-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <!-- 아이콘 사용 링크-->
+    <script src="https://kit.fontawesome.com/2a811fae19.js" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -54,12 +70,11 @@
 
 <section id="product1" class="section-p1">
     <h2>New Arrivals</h2>
-    <p>Summer Collection</p>
-    <br />
+    <p>F/W Collection</p>
     <div class="pro-container">
     {{#product}}
             <div class="pro" onclick="window.location.href='/products/{{productNo}}';">
-                <img src={{mainImage}} alt="">
+                <img src={{mainImage}} alt="{{name}}">
                 <div class="des">
                     <span>{{brand}}</span>
                     <h5>{{name}}</h5>
