--- a/src/main/resources/templates/layout/nav.mustache
+++ b/src/main/resources/templates/layout/nav.mustache
@@ -5,11 +5,11 @@
     <li><a>Shop</a>
         <div class="sub-bar">
             <ul>
-                <li><a href="/brands/romanticcrown">ROMANTIC CLOWN</a></li>
+                <li><a href="/brands/romanticcrown">ROMANTIC CROWN</a></li>
                 <li><a href="/brands/apoc">A PIECE OF CAKE</a></li>
                 <li><a href="/brands/mahagrid">mahagrid</a></li>
                 <li><a href="/brands/luvistrue">LUVISTRUE</a></li>
-                <li><a href="/brands/lee">lee</a></li>
+                <li><a href="/brands/lee">LEE</a></li>
             </ul>
         </div>
     </li>
