--- a/src/main/resources/templates/foryou.mustache
+++ b/src/main/resources/templates/foryou.mustache
@@ -18,6 +18,7 @@
             </li>
         </ul>
         <h2>{{userName}} 회원님을 위한 나바타의 추천</h2>
+        <h5>foryou 추천 시스템은 회원님의 체형정보({{userSize.height}}cm, {{userSize.weight}}kg)를 기반으로 이루어집니다.</h5>
 
         <div class="pro-container">
             {{#products}}
