--- a/src/main/resources/templates/product.mustache
+++ b/src/main/resources/templates/product.mustache
@@ -9,16 +9,16 @@
         <img src="{{product.mainImage}}" width="100%" id="MainImg" alt="">
         <div class="small-img-group">
             <div class="small-img-col">
-                <img src="img/products/n1.jpg" width="100%" class="small-img" alt="">
+                <img src="" width="100%" class="small-img" alt="">
             </div>
             <div class="small-img-col">
-                <img src="img/products/n2.jpg" width="100%" class="small-img" alt="">
+                <img src="" width="100%" class="small-img" alt="">
             </div>
             <div class="small-img-col">
-                <img src="img/products/n3.jpg" width="100%" class="small-img" alt="">
+                <img src="" width="100%" class="small-img" alt="">
             </div>
             <div class="small-img-col">
-                <img src="img/products/n4.jpg" width="100%" class="small-img" alt="">
+                <img src="" width="100%" class="small-img" alt="">
             </div>
         </div>
         {{#product.ARFitting}}
