--- a/src/main/resources/templates/signin.mustache
+++ b/src/main/resources/templates/signin.mustache
@@ -18,6 +18,9 @@
                 <ul class="scl">
                     <li><a href="/oauth2/authorization/google"><img class="kakao" src="/img/loginbtn_google.png"></a></li>
                 </ul>
+                <ul class="scl">
+                    <li><a href="/oauth2/authorization/naver"><img class="naver" src="/img/loginbtn_naver.png"></a></li>
+                </ul>
             {{/user}}
         </div>
     </div>
