0926 product satisfaction edit

--- a/src/main/resources/templates/product.mustache
+++ b/src/main/resources/templates/product.mustache
@@ -105,7 +105,7 @@
     <hr />
     <h1>만족도,,,</h1>
     {{#satisfactions}}
-        <h5>{{sizeSatisfaction}} ----- {{rate}}%</h5>
+        <h5>{{size}}({{sizeSatisfaction}}) ----- {{rate}}% (구매 {{count}})</h5>
     {{/satisfactions}}
 </section>
 
