--- a/src/main/resources/templates/signup.mustache
+++ b/src/main/resources/templates/signup.mustache
@@ -6,6 +6,10 @@
     <div class="contentBx">
         <div class="formBx">
             <h2>Sign Up</h2>
+            <h4>회원가입을 환영합니다! 아래 추가 정보를 입력해 주시면, NAVATAR만의 다양한 서비스를 이용하실 수 있습니다.</h4>
+            <br/>
+            <br/>
+            <br/>
             <form action="/users/signup" name="user" method="POST">
                 <div class="inputBx">
                     <span>이메일 * </span>
