--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -51,7 +51,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 80px;
+    padding: 60px 80px;
     background: #eae4d3;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
 
@@ -62,7 +62,7 @@ body {
 }
 
 #header img{
-    margin-left: -40px;
+    display: none;
 
 }
 
