--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -67,7 +67,15 @@ body {
 }
 
 #header .header-icon i {
-    display: none;
+    display: flex;
+    padding-right: 700px;
+}
+
+#header .header-icon i {
+    display:flex;
+    font-size: 40px;
+    color: #575757;
+    margin: 0 20px 0 20px;
 }
 
 #indextab {
@@ -76,7 +84,19 @@ body {
 
 
 #header .index-header-icon {
-    display: none;
+    display: flex;
+}
+
+#header .index-header-icon i {
+    display:flex;
+    font-size: 40px;
+    color: #575757;
+    margin: 0 20px 0 20px;
+}
+
+a#indexhome {
+    margin-right: 784px;
+
 }
 
 #navbar{
