--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -114,6 +114,7 @@ a#indexhome {
     box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
     padding: 80px 0 0 10px;
     transition: 0.3s;
+    list-style:none;
 }
 
 #navbar.active{
