--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -941,18 +941,18 @@ padding: 0;
 }
 
 #foryou .location {
-    margin-top: 60px;
+    display: none;
 
 }
 
-#foryou .pro{
+#foryou .pro {
     width: 23%;
-    min-width: 250px;
+    min-width: 400px;
     padding: 10px 12px;
     border: 1px solid #dfdcd3;
     border-radius: 25px;
     cursor: pointer;
-    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
+    box-shadow: 20px 20px 30px rgb(0 0 0 / 2%);
     margin: 15px 0;
     transition: 0.2s ease;
     position: relative;
