--- a/src/main/resources/static/css/shop.css
+++ b/src/main/resources/static/css/shop.css
@@ -51,7 +51,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 80px;
+    padding: 60px 80px;
     background: #eae4d3;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
 
@@ -62,29 +62,128 @@ body {
 }
 
 #header img{
-    margin-left: -40px;
+    display: none;
 
 }
 
 #header .header-icon {
-    display: none;
+    display:flex;
 }
 
-#header .shop-name h3 {
-    display: none;
-}
 
-#navbar{
+#header .shopheaderrc {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    margin-right: 160px;
+}
+
+#header .shopheaderrc .header-icon {
+    float: left;
+    margin-right: 80px;
+}
+
+#header .shopheaderlk {
+    display: flex;
+    margin-right: 311px;
+}
+
+#header .shopheaderlk .header-icon {
+    float: left;
+    margin-right: 161px;
+}
+
+#header .shopheaderpou {
+    display: flex;
+    margin-right: 213px;
+}
+
+#header .shopheaderpou .header-icon {
+    float: left;
+    margin-right: 93px;
+}
+
+#header .shopheadermd {
+    display: flex;
+    margin-right: 268px;
+}
+
+#header .shopheadermd .header-icon {
+    float: left;
+    margin-right: 187px;
+}
+
+#header .shopheaderluv {
+    display: flex;
+    margin-right: 240px;
+}
+
+#header .shopheaderluv .header-icon {
+    float: left;
+    margin-right: 144px;
+}
+
+/* navbar */
+
+#header .header-icon i {
+    display: flex;
+    font-size: 40px;
+    color: #575757;
+    margin: 0 20px 0 20px;
+}
+
+#header .shop-name h3{
+    display: flex;
+    font-size: 42px;
+    text-align: center;
+    color:#575757;
+    margin-left: 35px;
+
+}
+
+#navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: fixed;
+    top: 0;
+    right: -300px;
+    height: 100vh;
+    width: 300px;
+    background-color: #dcc7b0;
+    box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+    padding: 80px 0 0 10px;
+    transition: 0.3s;
+}
+
+#navbar.active{
+    right: 0px;
 }
 
 #navbar li{
-    list-style: none;
+    list-style: none; /*셋째줄까지 지우기?*/
     padding: 0 20px;
-    
     position: relative;
+    margin-bottom: 25px;
+}
+
+#tab{
+    display: flex;
+    align-items: center;
+}
+
+#tab i{
+    font-size: 40px;
+    color: #575757;
+
+}
+
+#close {
+    display: initial;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    font-size: 24px;
+    color: #575757;
 }
 
 #navbar li a {
@@ -118,20 +217,30 @@ body {
     justify-content: center;
 }
 
-#navbar li:hover .sub-bar{
-    display: block;
-    position: absolute;
-    background-color: #eae4d3; 
-    margin-left: -50px;
-    margin-top: 15px; 
-} 
+#navbar .sub-bar ul{
+    margin-top: 15px;
+    margin-left: -5px;
+
+}
+
+#navbar li:hover .sub-bar {
+    position:fixed;
+    background-color: #dcc7b0;
+    margin-left: -155px;
+    top: 100px;
+    /* z-index: 1; 맨앞으로 나오게 */
+    align-items: center;
+    justify-content: center;
+
+}
 
 #navbar li:hover .sub-bar ul{
     display: block;
     
 }
 
-#navbar li:hover .sub-bar ul li{
+
+#navbar li:hover .sub-bar ul li {
     margin-top: 15px;
     margin-bottom: 15px;
     margin-left: -10px;
@@ -139,13 +248,13 @@ body {
     border-radius: 0;
     text-align: center;
     width: 160px;
-
 }
 
 #navbar .sub-bar ul li a {
     text-decoration: none;
     font-size: 14px;
     font-weight: 500;
+    text-align: center;
 } 
 
 #navbar li .sub-bar a.active::after,
@@ -154,21 +263,26 @@ body {
 
 }
 
-
-
-
 #navbar .sub-bar2{
     display: none;
     align-items: center;
     justify-content: center;
 }
 
-#navbar li:hover .sub-bar2{
-    display: block;
-    position: absolute;
-    background-color: #eae4d3;
-    margin-left: -30px;
+#navbar .sub-bar2 ul{
     margin-top: 15px;
+    margin-left: -5px;
+}
+
+#navbar li:hover .sub-bar2 {
+    position:fixed;
+    background-color: #dcc7b0;
+    margin-left: -155px;
+    margin-top: -40px;
+    /* z-index: 1; 맨앞으로 나오게 */
+    align-items: center;
+    justify-content: center;
+
 }
 
 #navbar li:hover .sub-bar2 ul{
@@ -176,21 +290,22 @@ body {
 
 }
 
-#navbar li:hover .sub-bar2 ul li{
+#navbar li:hover .sub-bar2 ul li {
     margin-top: 15px;
     margin-bottom: 15px;
     margin-left: -10px;
     margin-right: -10px;
     border-radius: 0;
     text-align: center;
-    width: 100px;
-
+    width: 160px;
 }
+
 
 #navbar .sub-bar2 ul li a {
     text-decoration: none;
     font-size: 14px;
     font-weight: 500;
+    text-align: center;
 }
 
 #navbar li .sub-bar2 a.active::after,
@@ -213,36 +328,31 @@ body {
 
 
 /* 상품 리스트 */
-#product1{
+#product1 {
     text-align: center;
-    width: 100%;
     display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 0px 0px;
 }
 
 /* 사이드 메뉴 */
 #product1 .sidebar {
-    width: 15%;
-    padding-top: 50px;
-    height: 100%;
-    left: 0;
-    /*background: #a8a6a6;*/
-    margin-right: 20px;
-}
-
-#product1 .sidebar .text{
-    color: rgb(30, 30, 30);
-    font-size: 24px;
-    font-weight: 600;
-    line-height: 30px;
-    text-align: center;
-    letter-spacing: 1px;
-}
-
-.sidebar ul{
-    background: #dcc7b0;
-    height: 100%;
     width: 100%;
-    list-style: none;
+    height: 100px;
+    left: 0;
+    padding-top: 0;
+
+}
+
+#product1 .sidebar .text {
+    display: none;
+}
+
+.sidebar ul {
+    display:inline-flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .sidebar ul li{
@@ -250,15 +360,8 @@ body {
     border-bottom: 1px solid rgba(255,255,255,0.1);
 }
 
-.sidebar ul li a{
-    position: relative;
-    color: #fff;
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: 500;
-    display: block;
-    width: 100%;
-    /*border-left: 3px solid transparent;*/
+.sidebar ul li a {
+    font-size: 32px;
 }
 
 .sidebar ul li a:hover{
@@ -278,20 +381,14 @@ body {
     /*padding-left: 80px;*/
 }
 
-/* location area */
 
 #product1 .container{
-    display: inline-block;
-    width: 100%;
+    padding: 40px 90px;
 
 }
 
-.location{
-    /*background: #083c81;*/
-    display: flex;
-    margin-left: 40px;
-    margin-top: 60px;
-
+.location {
+    display: none;
 }
 
 .location_item{
@@ -325,19 +422,19 @@ body {
 
     display: flex;
     justify-content: space-between;
-    padding-top: 10px;
+    padding-top: 20px;
     flex-wrap: wrap;
-    margin-left: 20px;
+    margin-left: 0;
 }
 
-#product1 .pro{
+#product1 .pro {
     width: 23%;
-    min-width: 250px;
+    min-width: 400px;
     padding: 10px 12px;
     border: 1px solid #dfdcd3;
     border-radius: 25px;
     cursor: pointer;
-    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
+    box-shadow: 20px 20px 30px rgb(0 0 0 / 2%);
     margin: 15px 0;
     transition: 0.2s ease;
     position: relative;
@@ -375,7 +472,7 @@ body {
     font-weight: 700;
 }
 
-#product1 .pro .fa-adn{ /*ar피팅 버튼*/
+#product1 .pro .fa-adn {
     width: 40px;
     height: 40px;
     line-height: 40px;
@@ -387,6 +484,12 @@ body {
     position: absolute;
     bottom: 20px;
     right: 10px;
+}
+
+
+#page.section-p1 {
+    margin-top: 40px;
+
 }
 
 #page{
@@ -446,295 +549,4 @@ footer a{
 footer .copyright{
     width: 100%;
     text-align: center;
-}
-
-
-/* Responsive Wed Settings (1080x1920) */
-@media (max-width: 1080px) {
-
-    #header {
-        padding: 60px 80px;
-    }
-
-    #header img {
-        display: none;
-    }
-
-    #header .header-icon {
-        display:flex;
-    }
-
-    #header .shopheaderrc {
-        display: flex;
-        margin-right: 160px;
-    }
-
-    #header .shopheaderrc .header-icon {
-        float: left;
-        margin-right: 80px;
-    }
-
-    #header .shopheaderlk {
-        display: flex;
-        margin-right: 311px;
-    }
-
-    #header .shopheaderlk .header-icon {
-        float: left;
-        margin-right: 161px;
-    }
-
-    #header .shopheaderpou {
-        display: flex;
-        margin-right: 213px;
-    }
-
-    #header .shopheaderpou .header-icon {
-        float: left;
-        margin-right: 93px;
-    }
-
-    #header .shopheadermd {
-        display: flex;
-        margin-right: 268px;
-    }
-
-    #header .shopheadermd .header-icon {
-        float: left;
-        margin-right: 187px;
-    }
-
-    #header .shopheaderluv {
-        display: flex;
-        margin-right: 240px;
-    }
-
-    #header .shopheaderluv .header-icon {
-        float: left;
-        margin-right: 144px;
-    }
-
-    /* navbar */
-
-    #header .header-icon i {
-        display: flex;
-        font-size: 40px;
-        color: #575757;
-        margin: 0 20px 0 20px;
-    }
-
-    #header .shop-name h3{
-        display: flex;
-        font-size: 42px;
-        text-align: center;
-        color:#575757;
-        margin-left: 35px;
-
-    }
-
-
-    #navbar {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-start;
-        position: fixed;
-        top: 0;
-        right: -300px;
-        height: 100vh;
-        width: 300px;
-        background-color: #dcc7b0;
-        box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
-        padding: 80px 0 0 10px;
-        transition: 0.3s;
-    }
-
-    #navbar.active{
-        right: 0px;
-    }
-
-    #navbar li {
-        margin-bottom: 25px;
-    }
-
-    #tab{
-        display: flex;
-        align-items: center;
-    }
-
-    #tab i{
-        font-size: 40px;
-        color: #575757;
-
-    }
-
-    #close {
-        display: initial;
-        position: absolute;
-        top: 30px;
-        left: 30px;
-        font-size: 24px;
-        color: #575757;
-    }
-
-    #navbar .sub-bar{
-        display: none;
-        align-items: center;
-        justify-content: center;
-
-    }
-    #navbar .sub-bar ul{
-        margin-top: 15px;
-        margin-left: -5px;
-
-    }
-
-    #navbar li:hover .sub-bar {
-        position:fixed;
-        background-color: #dcc7b0;
-        margin-left: -155px;
-        top: 100px;
-        /* z-index: 1; 맨앞으로 나오게 */
-        align-items: center;
-        justify-content: center;
-
-    }
-
-    #navbar li:hover .sub-bar ul li {
-        margin-top: 15px;
-        margin-bottom: 15px;
-        margin-left: -10px;
-        margin-right: -10px;
-        border-radius: 0;
-        text-align: center;
-        width: 160px;
-    }
-
-    #navbar .sub-bar ul li a {
-        text-decoration: none;
-        font-size: 14px;
-        font-weight: 500;
-        text-align: center;
-    }
-
-
-    #navbar .sub-bar2{
-        display: none;
-        align-items: center;
-        justify-content: center;
-
-    }
-    #navbar .sub-bar2 ul{
-        margin-top: 15px;
-        margin-left: -5px;
-    }
-
-    #navbar li:hover .sub-bar2 {
-        position:fixed;
-        background-color: #dcc7b0;
-        margin-left: -155px;
-        margin-top: -40px;
-        /* z-index: 1; 맨앞으로 나오게 */
-        align-items: center;
-        justify-content: center;
-
-    }
-
-    #navbar li:hover .sub-bar2 ul li {
-        margin-top: 15px;
-        margin-bottom: 15px;
-        margin-left: -10px;
-        margin-right: -10px;
-        border-radius: 0;
-        text-align: center;
-        width: 160px;
-    }
-
-    #navbar .sub-bar2 ul li a {
-        text-decoration: none;
-        font-size: 14px;
-        font-weight: 500;
-        text-align: center;
-    }
-
-    /* shop page */
-    #product1 .sidebar .text {
-        display: none;
-    }
-
-    .location {
-        display: none;
-    }
-
-    #product1 {
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        padding: 0px 0px;
-    }
-
-    #product1 .sidebar {
-        width: 100%;
-        height: 100px;
-        left: 0;
-        padding-top: 0;
-
-    }
-
-    .sidebar ul li a {
-        font-size: 32px;
-    }
-
-    .sidebar ul {
-        display:inline-flex;
-        align-items: center;
-        justify-content: space-evenly;
-    }
-
-    #product1 .container {
-        padding: 40px 90px;
-    }
-
-    #product1 .pro-container {
-        display: flex;
-        justify-content: space-between;
-        padding-top: 20px;
-        flex-wrap: wrap;
-        margin-left: 0;
-    }
-
-    #product1 .pro {
-        width: 23%;
-        min-width: 400px;
-        padding: 10px 12px;
-        border: 1px solid #dfdcd3;
-        border-radius: 25px;
-        cursor: pointer;
-        box-shadow: 20px 20px 30px rgb(0 0 0 / 2%);
-        margin: 15px 0;
-        transition: 0.2s ease;
-        position: relative;
-    }
-
-    #product1 .pro .fa-adn {
-        width: 40px;
-        height: 40px;
-        line-height: 40px;
-        border-radius: 50px;
-        background-color: #f7f3e7;
-        font-weight: 500;
-        color: #083c81;
-        border: 1px solid #eae4d3;
-        position: absolute;
-        bottom: 20px;
-        right: 10px;
-    }
-
-    #page.section-p1 {
-        margin-top: 40px;
-
-    }
-
-
 }
