--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -181,7 +181,7 @@ a#indexhome {
 }
 /* 서브 카테고리 */
 #navbar .sub-bar{
-    display: none;
+    display: flex;
     align-items: center;
     justify-content: center;
 }
