--- a/src/main/resources/static/css/shop.css
+++ b/src/main/resources/static/css/shop.css
@@ -365,7 +365,18 @@ body {
 .sidebar ul li a {
     font-size: 32px;
     text-decoration: none;
+    color: black;  
 }
+
+.sidebar ul li a:visited { text-decoration: none; 
+}
+.sidebar ul li a:hover { text-decoration: none; 
+}
+.sidebar ul li a:focus { text-decoration: none; 
+}
+.sidebar ul li a:hover, a:active { text-decoration: none; 
+}
+
 
 .sidebar ul li a:hover{
     color: rgb(54, 54, 54);
