--- a/src/main/resources/static/css/shop.css
+++ b/src/main/resources/static/css/shop.css
@@ -169,17 +169,16 @@ body {
     box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
     padding: 80px 0 0 10px;
     transition: 0.3s;
+    list-style:none;
 }
 
 #navbar.active{
     right: 0px;
 }
 
-#navbar li{
-    list-style: none; /*셋째줄까지 지우기?*/
-    padding: 0 20px;
-    position: relative;
+#navbar li {
     margin-bottom: 25px;
+    list-style: none;
 }
 
 #tab{
@@ -207,7 +206,7 @@ body {
     display: initial;
     position: absolute;
     top: 30px;
-    left: 30px;
+    left: 10px;
     font-size: 24px;
     color: #575757;
 }
@@ -219,11 +218,11 @@ body {
     color: #575757;
     transition: 0.3s ease; /*네비탭 마우스 가져갔을 때 색 부드럽게 바뀌게 설정*/
     padding-bottom: 20px;
-} 
+}
 
 #navbar li a:hover, /* hover: 네비탭 마우스 가져가면 색 변하는 거*/
 #navbar li a.active {  /*active: 네비탭 현재 선택된 페이지에서 상태 변화 */
-    color: #083c81; 
+    color: #083c81;
 }
 
 #navbar li a.active::after,
@@ -238,50 +237,25 @@ body {
 }
 /* 서브 카테고리 */
 #navbar .sub-bar{
-    display: none;
+    display: flex;
     align-items: center;
     justify-content: center;
 }
 
 #navbar .sub-bar ul{
     margin-top: 15px;
-    margin-left: -5px;
+    margin-left: 15px;
 
 }
 
-#navbar li:hover .sub-bar {
-    position:fixed;
-    background-color: #dcc7b0;
-    margin-left: -155px;
-    top: 100px;
-    /* z-index: 1; 맨앞으로 나오게 */
-    align-items: center;
-    justify-content: center;
 
-}
-
-#navbar li:hover .sub-bar ul{
-    display: block;
-    
-}
-
-
-#navbar li:hover .sub-bar ul li {
-    margin-top: 15px;
-    margin-bottom: 15px;
-    margin-left: -10px;
-    margin-right: -10px;
-    border-radius: 0;
-    text-align: center;
-    width: 160px;
-}
 
 #navbar .sub-bar ul li a {
     text-decoration: none;
     font-size: 14px;
     font-weight: 500;
     text-align: center;
-} 
+}
 
 #navbar li .sub-bar a.active::after,
 #navbar li .sub-bar a:hover::after {
@@ -289,41 +263,18 @@ body {
 
 }
 
+
+
+
 #navbar .sub-bar2{
-    display: none;
+    display: flex;
     align-items: center;
     justify-content: center;
 }
 
 #navbar .sub-bar2 ul{
     margin-top: 15px;
-    margin-left: -5px;
-}
-
-#navbar li:hover .sub-bar2 {
-    position:fixed;
-    background-color: #dcc7b0;
-    margin-left: -155px;
-    margin-top: -40px;
-    /* z-index: 1; 맨앞으로 나오게 */
-    align-items: center;
-    justify-content: center;
-
-}
-
-#navbar li:hover .sub-bar2 ul{
-    display: block;
-
-}
-
-#navbar li:hover .sub-bar2 ul li {
-    margin-top: 15px;
-    margin-bottom: 15px;
-    margin-left: -10px;
-    margin-right: -10px;
-    border-radius: 0;
-    text-align: center;
-    width: 160px;
+    margin-left: 15px;
 }
 
 
