--- a/src/main/resources/templates/apoc.mustache
+++ b/src/main/resources/templates/apoc.mustache
@@ -63,7 +63,7 @@
             <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
         </ul>
     </div>
-    <div id="tab">
+<div id="indextab">
         <i id="bar" class="fa-solid fa-bars"></i>
     </div>
 
