--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1334,30 +1334,46 @@ padding: 0;
 
 /* My Page */
 
-#mypage-area {
+#mypage-area{
     position: relative;
     width: 100%;
     height: 1370px;
     display: flex;
-    max-width: 930px;
+    max-width: 600px;
     background: #fff;
     margin: 20px auto;
     padding: 10px 12px;
-    border: 0px solid #dcc7b0;
+    border: 1px solid #dcc7b0;
     border-radius: 25px;
-    box-shadow: none;
-    margin-top: 100px;
+    box-shadow: 20px 20px 30px rgb(0 0 0 / 2%);
+    margin-top: 50px;
+
 }
 
-#mypage-area .contentBx {
-    margin-top: 40px;
-    max-height: 1300px;
+#mypage-area .contentBx{
+    display: inline;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 70vh;
+
+    position: relative;
+    margin: 20px;
+    max-height: 600px;
 }
 
-#mypage-area .contentBx h2 {
-    font-size: 66px;
-    margin-bottom: 50px;
-    line-height: 100px;
+#mypage-area .contentBx h2{
+    color: #000000;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 28px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    border-bottom: 4px solid #083c81;
+    letter-spacing: 1px;
+    /* margin-top: 20px; */
+
+
 }
 
 #mypage-area .contentBx .mypage-form {
@@ -1384,12 +1400,14 @@ padding: 0;
 }
 
 #mypage-area .contentBx .mypage-form .profile .proflie-name {
+
     align-items: center;
-    width: 50%;
-    font-size: 38px;
+    width: 70%;
+    font-size: 18px;
     display: flex;
     text-align: center;
-    margin-left: 60px;
+    margin-left: 20px;
+    font-size: 22px;
     font-weight: 500;
 }
 
