--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1339,18 +1339,20 @@ padding: 0;
     width: 100%;
     height: 1370px;
     display: flex;
-    max-width: 600px;
+    max-width: 930px;
     background: #fff;
     margin: 20px auto;
     padding: 10px 12px;
     border: 1px solid #dcc7b0;
     border-radius: 25px;
-    box-shadow: 20px 20px 30px rgb(0 0 0 / 2%);
-    margin-top: 50px;
+    box-shadow: none;
+    margin-top: 100px;
 
 }
 
 #mypage-area .contentBx{
+
+    margin-top: 40px;
     display: inline;
     justify-content: center;
     align-items: center;
@@ -1359,18 +1361,19 @@ padding: 0;
 
     position: relative;
     margin: 20px;
-    max-height: 600px;
+    max-height: 1300px;
 }
 
 #mypage-area .contentBx h2{
     color: #000000;
     text-align: center;
     text-transform: uppercase;
-    font-size: 28px;
+    font-size: 66px;
     font-weight: 600;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
     border-bottom: 4px solid #083c81;
     letter-spacing: 1px;
+    line-height: 100px;
     /* margin-top: 20px; */
 
 
@@ -1394,19 +1397,20 @@ padding: 0;
 }
 
 #mypage-area .contentBx .mypage-form .profile .profile-pic {
+
     align-items: center;
-    width: 120px;
-    height: 120px;
+    width: 220px;
+    height: 220px;
 }
 
 #mypage-area .contentBx .mypage-form .profile .proflie-name {
 
     align-items: center;
-    width: 70%;
-    font-size: 18px;
+    width: 50%;
+    font-size: 38px;
     display: flex;
     text-align: center;
-    margin-left: 20px;
+    margin-left: 60px;
     font-size: 22px;
     font-weight: 500;
 }
@@ -1444,11 +1448,14 @@ padding: 0;
     width: 70%;
     text-align: left;
     margin-left: 10px;
+    font-size: 34px;
+    font-weight: 400;
 }
 
 
 #mypage-area .contentBx .mypage-form .mypage-menu i {
     margin-left: 140px;
+    font-size: 34px;
 }
 
 /* MyPage_Info */
@@ -1456,17 +1463,17 @@ padding: 0;
 #mypageinfo-area {
     position: relative;
     width: 100%;
-    height: 70vh;
+    height: 1500px;
     display: flex;
-    max-width: 600px;
+    max-width: 800px;
     height: 650px;
     width: 100%;
     background: #fff;
     margin: 20px auto;
     padding: 10px 12px;
-    border: 1px solid #dcc7b0;
+    border: 0px solid #dcc7b0;
     border-radius: 25px;
-    box-shadow: 20px 20px 30px rgb(0 0 0 / 2%);
+    box-shadow: none;
     margin-top: 50px;
 
 }
@@ -1482,7 +1489,9 @@ padding: 0;
 }
 
 #mypageinfo-area .contentBx .formBx {
-    margin-top: 60px;
+    width: 100%;
+    margin-bottom: -180px;
+    margin-top: 120px;
 }
 
 
@@ -1490,21 +1499,22 @@ padding: 0;
     color: #000000;
     text-align: center;
     text-transform: uppercase;
-    font-size: 28px;
+    font-size: 66px;
     font-weight: 600;
-    margin-top: 120px;
-    margin-bottom: 20px;
-    border-bottom: 4px solid #083c81;
+    margin-top: 330px;
+    margin-bottom: 70px;
+    border-bottom: 6px solid #083c81;
+    line-height: 84px;
     letter-spacing: 1px;
 }
 
 #mypageinfo-area .contentBx .formBx .inputBx{
-    margin-bottom: 20px;
+    margin-bottom: 60px;
 }
 
 #mypageinfo-area .contentBx .formBx .inputBx span{
-    font-size: 16px;
-    margin-bottom: 5px;
+    font-size: 42px;
+    margin-bottom: 15px;
     display: inline-block;
     color: #222;
     font-weight: 300;
@@ -1513,11 +1523,12 @@ padding: 0;
 
 #mypageinfo-area .contentBx .formBx .inputBx input{
     width: 100%;
+    height: 100px;
     padding: 10px 10px;
     outline: none;
     font-weight: 400;
     border: 1px solid #083c81;
-    font-size: 16px;
+    font-size: 36px;
     letter-spacing: 1px;
     color: #222;
     background: transparent;
@@ -1530,8 +1541,12 @@ padding: 0;
     outline: none;
     border: none;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 42px;
     cursor: pointer;
+    width: 450px;
+    height: 80px;
+    justify-content: center;
+    align-items: center;
 }
 
 #mypageinfo-area .contentBx .formBx .inputBx input[type="submit"]:hover{
@@ -1604,21 +1619,24 @@ padding: 0;
 
 #mypage-area .contentBx .mypagelike-form {
     overflow: auto;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+    flex-wrap: wrap;
 }
 
 #mypage-area .contentBx .mypagelike-form .pro {
 
     width: 23%;
-    min-width: 160px;
+    min-width: 400px;
     padding: 10px 12px;
     border: 1px solid #cce7d0;
     border-radius: 25px;
     cursor: pointer;
     box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
-    margin: 5px 5px;
+    margin: 15px 0;
     transition: 0.2s ease;
     position: relative;
-    display: inline-block;
 
 }
 
@@ -1699,7 +1717,7 @@ padding: 0;
 #mypage-area .contentBx .mypage_page {
     display: block;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 50px;
 }
 
 #mypage-area .contentBx .mypage_page .left {
@@ -1813,12 +1831,12 @@ padding: 0;
     position: absolute;
     right: 0px;
     top: -7px;
-    font-size: 12px;
+    font-size: 24px;
 }
 
 #mypage-area .contentBx .mypagecart-form .pro img {
     width: 100%;
-    max-width: 150px;
+    max-width: 220px;
     height: auto;
     border-radius: 20px;
 }
@@ -1832,38 +1850,41 @@ padding: 0;
 
 #mypage-area .contentBx .mypagecart-form .pro .des span {
     color: #606063;
-    font-size: 12px;
+    font-size: 24px;
 }
 
 #mypage-area .contentBx .mypagecart-form .pro .des h5 {
     padding-top: 7px;
     color: #1a1a1a;
-    font-size: 14px;
+    font-size: 32px;
 }
 
 #mypage-area .contentBx .mypagecart-form .pro .des h4 {
     padding-top: 7px;
     color: #083c81;
-    font-size: 15px;
+    font-size: 24px;
     font-weight: 700;
 }
 
 #mypage-area .contentBx .mypagecart-form .pro .des p {
-    font-size: 12px;
+    font-size: 22px;
     margin-top: 7px;
 }
 
 #mypage-area .contentBx .mypagecart-form .total_price {
     width: 100%;
-    padding-bottom: 50px;
+    margin-top: 40px;
+    padding-bottom: 135px;
 }
 
 #mypage-area .contentBx .mypagecart-form .total_price h3 {
     float: left;
+    font-size: 36px;
 }
 
 #mypage-area .contentBx .mypagecart-form .total_price p {
     float: right;
+    font-size: 36px
 }
 
 #mypage-area .contentBx .mypagecart-form .orderBx {
@@ -1889,7 +1910,7 @@ padding: 0;
     outline: none;
     border: none;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 42px;
     cursor: pointer;
     margin-right: 5px;
 
@@ -1901,7 +1922,7 @@ padding: 0;
     outline: none;
     border: none;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 42px;
     cursor: pointer;
     margin-left: 5px;
 }
