--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1017,6 +1017,11 @@ padding: 0;
     margin-bottom: 50px;
 }
 
+#login-area .contentBx .formBx{
+    width: 100%;
+    height: 100%;
+}
+
 #login-area .contentBx .formBx h2{
     color: #000000;
     text-align: center;
