--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1020,17 +1020,18 @@ padding: 0;
 #login-area .contentBx .formBx{
     width: 100%;
     height: 100%;
+    margin-top: 900px;
 }
 
 #login-area .contentBx .formBx h2{
     color: #000000;
     text-align: center;
     text-transform: uppercase;
-    font-size: 28px;
+    font-size: 58px;
     font-weight: 600;
-    margin-bottom: 20px;
-    border-bottom: 4px solid #083c81;
-    letter-spacing: 1px;
+    margin-bottom: 105px;
+    border-bottom: 8px solid #083c81;
+    letter-spacing: 2px;
 }
 
 #login-area .contentBx .formBx .inputBx{
@@ -1093,8 +1094,9 @@ padding: 0;
 #login-area .contentBx .formBx h4{
     color: #222;
     text-align: center;
-    margin: 40px 0 10px;
-    font-weight: 500;
+    margin: 59px 0 45px;
+    font-weight: 600;
+    font-size: 38px;
 }
 
 
