--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1624,10 +1624,10 @@ padding: 0;
     outline: none;
     border: none;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 38px;
     cursor: pointer;
-    width: 200px;
-    height: 30px;
+    width: 265px;
+    height: 66px;
     justify-content: center;
     align-items: center;
 }
@@ -1887,6 +1887,10 @@ padding: 0;
     font-size: 22px;
     margin-top: 7px;
 }
+
+#mypage-area .contentBx .mypagecart-form .pro .des input[type="submit"] {
+    width: 80px;
+} 
 
 #mypage-area .contentBx .mypagecart-form .total_price {
     width: 100%;
