--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1888,7 +1888,7 @@ padding: 0;
     margin-top: 7px;
 }
 
-#mypage-area .contentBx .mypagecart-form .pro .des input[type="submit"] {
+#mypage-area .contentBx .mypagecart-form .pro input[type="submit"] {
     width: 80px;
 } 
 
