--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1889,7 +1889,12 @@ padding: 0;
 }
 
 #mypage-area .contentBx .mypagecart-form .pro input[type="submit"] {
-    width: 80px;
+    width: 150px;
+    height: 60px;
+    font-size: 20px;
+    margin-top: 90px;
+    background-color: #083c81;
+    color: #fff;
 } 
 
 #mypage-area .contentBx .mypagecart-form .total_price {
