--- a/src/main/resources/templates/review.mustache
+++ b/src/main/resources/templates/review.mustache
@@ -31,7 +31,7 @@
             </div>
 
             <div class="review_write_Btn">
-                <input type="submit" class="review_write_applyBtn">작성 완료</input>
+                <input type="submit" class="review_write_applyBtn"></input>
                 <button class="review_write_cancleBtn">작성 취소</button>
             </div>
         </form>
