--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1301,7 +1301,6 @@ padding: 0;
     margin-bottom: -180px;
     margin-top: 120px;
 }
-}
 
 
 #signupA-area .contentBx .formBx h2{
@@ -1310,6 +1309,7 @@ padding: 0;
     text-transform: uppercase;
     font-size: 66px;
     font-weight: 600;
+    margin-top: -330px;
     margin-bottom: 20px;
     border-bottom: 4px solid #083c81;
     letter-spacing: 1px;
