--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1155,7 +1155,7 @@ padding: 0;
     text-transform: uppercase;
     font-size: 66px;
     font-weight: 600;
-    margin-top: -330px;
+    margin-top: 0px;
     margin-bottom: 20px;
     border-bottom: 4px solid #083c81;
     letter-spacing: 1px;
@@ -1166,11 +1166,11 @@ padding: 0;
 }
 
 #signup-area .contentBx .formBx .inputBx span{
-    font-size: 16px;
+    font-size: 26px;
     margin-bottom: 5px;
     display: inline-block;
     color: #222;
-    font-weight: 300;
+    font-weight: 700;
     letter-spacing: 1px;
 }
 
@@ -1185,6 +1185,10 @@ padding: 0;
     color: #222;
     background: transparent;
 
+}
+
+#signup-area p {
+    font-size: 20px;
 }
 
 #signup-area .contentBx .formBx .inputBx input[type="submit"]{
