--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1335,8 +1335,9 @@ padding: 0;
 }
 
 #signupA-area .contentBx .formBx h3 {
-    font-size: 48px;
+    font-size: 43px;
     align-items: center;
+    margin-top: 50px;
 }
 
 
