--- a/src/main/resources/templates/foryou.mustache
+++ b/src/main/resources/templates/foryou.mustache
@@ -9,7 +9,7 @@
 <section id="header">
     <a href="/"><img src="/img/logo.png" class="logo" alt="" width=150px></a>
     <div class="index-header-icon">
-        <a href="/" id="indexhome"><i class="fa-solid fa-house"></i></a>
+        <i class="fa-solid fa-arrow-left" onClick="history.go(-1)"></i>
     </div>
     <div>
         <ul id="navbar">
